--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,6 +89,8 @@ Top Page
     left: -6%;
     top: 0;
     border-radius: 5px;
+    transition: opacity 1s ease, height 1s ease;
+    overflow: hidden;
 
 }
 
