--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,6 @@ Top Page
 }
 
 .accordion-con .accordion-title span {
-    color: #ff6d00;
     padding: 26px;
     font-size: 30px;
     color: #fff;
@@ -57,6 +56,7 @@ Top Page
     border-radius: 10px;
     font-family: "lato", sans-serif;
     font-weight: 700;
+    cursor: pointer;
 }
 
 .accordion-con .accordion-title h3 {
