--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,7 +63,7 @@ Top Page
     background-color: #F5F5F5;
     font-size: 23px;
     cursor: pointer;
-    padding: 30px 40px;
+    padding: 35px 0px 25px 30px ;
     border-radius: 10px;
     width: 100%;
     margin: 0;
