--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,7 @@ Top Page
     font-size: 23px;
     font-weight: normal;
     cursor: pointer;
-    padding: 30px 40px;
+    padding: 35px 0px 25px 30px;
     border-radius: 10px;
     width: 100%;
     margin: 2px;
