--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -292,13 +292,16 @@ section{
     right: 10px;
     /* font-size: 12px; */
 }
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1200px) {
     .content-blk {
         padding: 65px 20px 120px 20px;
     }
     .tab-content {
         padding: 68px 20px 80px;
     }
+    .nav-list li {
+        max-width: 250px;
+}
 }
 @media screen and (max-width: 768px) {
     section{
